--- a/index.html
+++ b/index.html
@@ -11,6 +11,69 @@
       type="text/css"
     />
     <script src="https://cdn.tailwindcss.com"></script>
+
+    <!-- Google font Poppins -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap"
+        rel="stylesheet">
+
+        <!-- custom styles -->
+    <style>
+      .font-poppins {
+          font-family: 'Poppins', sans-serif;
+      }
+  </style>
+
+<script>
+  tailwind.config = {
+    theme: {
+      extend: {
+        colors: {
+          clifford: '#da373d',
+          'primary_color': '#E76F51',
+        }
+      }
+    }
+  }
+</script>
   </head>
-  <body></body>
+  <body class="font-poppins">
+    <!-- header -->
+    <header class="md:container mx-auto">
+    <!-- Navbar -->
+    <div class="navbar bg-base-100 justify-between">
+      <div class="flex-1">
+        <div class="dropdown">
+          <label tabindex="0" class="btn btn-ghost lg:hidden">
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" /></svg>
+          </label>
+          <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52 text-base">
+            <li><a>Home</a></li>
+            <li><a>Shop</a></li>
+            <li><a>News</a></li>
+            <li><a>Contact</a></li>
+          </ul>
+        </div>
+        <a class="btn btn-ghost normal-case text-5xl">BikerZ</a>
+      </div>
+      <div class="navbar-center hidden lg:flex">
+        <ul class="menu menu-horizontal px-1 text-base">
+          <li><a>Home</a></li>
+            <li><a>Shop</a></li>
+            <li><a>News</a></li>
+            <li><a>Contact</a></li>
+        </ul>
+      </div>
+      <div class="w-auto">
+        <a class="btn btn-error text-white px-8 bg-primary_color">Login</a>
+      </div>
+    </div>
+  </header>
+
+  <!-- main -->
+  <main class="md:container mx-auto">
+    
+  </main>
+  </body>
 </html>
