--- a/index.html
+++ b/index.html
@@ -182,7 +182,60 @@
 
   <!-- main -->
   <main class="md:container mx-auto">
+  <!-- Featured Bike Section -->
+  <section class="my-4">
+    <h1 class="text-center text-4xl font-semibold mt-28 p-4">Featured Bikes In This Year</h1>
+    <p class="text-center text-xl text-primary_color my-4 p-4 lg:p-0">Best Bikes Collection</p>
 
+    <div class="flex flex-col lg:flex-row justify-around my-20 p-10 md:p-32 gap-20 lg:p-0">
+      <img src="./images/others/feature-bike.png" alt="">
+      <img src="./images/others/feature-bike.png" alt="">
+      <img src="./images/others/feature-bike.png" alt="">
+    </div>
+  </section>
+  <!-- Latest news Section -->
+  <section class="my-4">
+    <h1 class="text-center text-4xl font-semibold mt-28 p-4">Latest News</h1>
+
+    <div class="my-16 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-2 justify-around">
+      <!-- First Card -->
+      <div class="card w-[380px] bg-base-100 shadow-xl p-5 m-auto">
+        <figure><img src="./images/others/latest1.png" alt="Bikes" /></figure>
+        <div class="card-body">
+          <h2 class="card-title text-3xl">Ducati XDIAVEL S-73</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+          <div class="card-actions">
+            <button class="btn btn-error text-white px-8 bg-primary_color">Read More</button>
+          </div>
+        </div>
+      </div>
+
+      <!-- Second Card -->
+      <div class="card w-[380px] bg-base-100 shadow-xl p-5 m-auto">
+        <figure><img src="./images/others/latest2.png" alt="Bikes" /></figure>
+        <div class="card-body">
+          <h2 class="card-title text-3xl">Ducati XDIAVEL S-73</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+          <div class="card-actions">
+            <button class="btn btn-error text-white px-8 bg-primary_color">Read More</button>
+          </div>
+        </div>
+      </div>
+
+      <!-- Third Card -->
+      <div class="card w-[380px] bg-base-100 shadow-xl p-5 m-auto">
+        <figure><img src="./images/others/latest3.png" alt="Bikes" /></figure>
+        <div class="card-body">
+          <h2 class="card-title text-3xl">Ducati XDIAVEL S-73</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+          <div class="card-actions">
+            <button class="btn btn-error text-white px-8 bg-primary_color">Read More</button>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </section>
   </main>
   </body>
 </html>
