--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
   </section>
   <!-- Latest news Section -->
   <section class="my-4">
-    <h1 class="text-center text-4xl font-semibold mt-28 p-4">Latest News</h1>
+    <h1 class="text-center text-4xl font-semibold my-28 p-4">Latest News</h1>
 
     <div class="my-16 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-2 justify-around">
       <!-- First Card -->
@@ -234,6 +234,75 @@
         </div>
       </div>
 
+    </div>
+  </section>
+
+  <!-- Clients Section -->
+
+  <section>
+    <h1 class="text-center text-4xl font-semibold my-24 p-4">Happy <span class="text-primary_color">Clients says</span></h1>
+
+    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-10">
+      <!-- First Review -->
+      <div class="card w-[380px] bg-base-100 shadow-xl p-9 m-auto border border-gray-400 pb-0">
+        <figure><img class="w-36" src="./images/others/user-1.png" alt="Bikes" /></figure>
+        <div class="card-body m-auto">
+          <p class="text-center">Slate helps you see how 
+            many more days you need 
+            to work to reach your financial 
+            goal for the month and year.</p>
+
+            <div class="rating m-auto my-3">
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked/>
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+            </div> 
+          <p class="text-center text-[#23A6F0] font-semibold">Regina Miles</p>
+          <p class="text-center font-semibold">Banker</p>
+        </div>
+      </div>
+      <!-- Second Review -->
+      <div class="card w-[380px] h-auto bg-base-100 shadow-xl p-9 m-auto border border-gray-400 pb-0">
+        <figure><img class="w-36" src="./images/others/user-2.png" alt="Bikes" /></figure>
+        <div class="card-body m-auto">
+          <p class="text-center">Slate helps you see how 
+            many more days you need 
+            to work to reach your financial 
+            goal for the month and year.</p>
+
+            <div class="rating m-auto my-3">
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400"  />
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+            </div> 
+          <p class="text-center text-[#23A6F0] font-semibold">Regina Miles</p>
+          <p class="text-center font-semibold">Web Developer</p>
+        </div>
+      </div>
+      <!-- Third Review -->
+      <div class="card w-[380px] bg-base-100 shadow-xl p-9 m-auto border border-gray-400 pb-0">
+        <figure><img class="w-36" src="./images/others/user-3.png" alt="Bikes" /></figure>
+        <div class="card-body m-auto">
+          <p class="text-center">Slate helps you see how 
+            many more days you need 
+            to work to reach your financial 
+            goal for the month and year.</p>
+
+            <div class="rating m-auto my-3">
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400"  />
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+            </div> 
+          <p class="text-center text-[#23A6F0] font-semibold">Regina Miles</p>
+          <p class="text-center font-semibold">Doctor</p>
+        </div>
+      </div>
     </div>
   </section>
   </main>
