--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -529,7 +529,7 @@
         <a class="link link-hover">Help</a>
         <a class="link link-hover">Privacy</a>
         <a class="link link-hover">Download Now</a>
-        <a class="link link-hover">License</a>
+        <a class="link link-hover text-2 text-re w-f grid-co">License</a>
       </div>
       <div>
         <span class="footer-title">Get the App</span>
